# snowflake_sandbox

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  earthquake.ipynb  main.py  model_analysis.xlsx  pyproject.toml  ~$model_analysis.xlsx
.github/workflows/: cd.txt  cd.yml  ci.yml  dbt.yml  terraform.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: ingest_usgc_earthquakes.sql
dbt/models/marts/: _analysis__models.yml  _mart__models.yml  dim_alert_status.sql  dim_date.sql  dim_event_classification.sql  dim_location.sql  fact_seismic_event.sql
dbt/models/presentation/: _presentation__models.yml  dim_alert_status_view.sql  dim_date_view.sql  dim_event_classification_view.sql  dim_location_view.sql  fact_seismic_event_view.sql
dbt/models/staging/: _src_earthquake.yml  _stg_earthquake.yml  stg_earthquake__alert_status.sql  stg_earthquake__event_classification.sql  stg_earthquake__location.sql  stg_earthquake__seismic_event.sql
dbt/seeds/: magnitude_types.csv  seed_config.yml  us_state_codes.csv
dbt/tests/: assert_country_not_in_region.sql  assert_magnitude_greater_than_five.sql
docs/: earthquake_model.drawio
scripts/: setup_snowflake.py
scripts/ddl/: ingestion_metadata.sql  usgc_earthquakes_fdsnws_landing.sql  usgs_earthquakes_fdsnws.sql
scripts/dml/: ingestion_metadata_dml.sql
scripts/network/: external_access_integration.sql  network_rules.sql
scripts/procs/: usgc_earthquake_proc.sql
scripts/users/: create_users.sql
terraform/: README.md  TODO.md
terraform/environments/account/: main.tf  variables.tf  (+2 more)
(+26 files in other folders)
