[project]
name = "snowflake-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.0",
    "dbt-snowflake>=1.9.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
    "snowflake-core>=1.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
